[Feat] 서버 시간을 기준으로 필름 카운트 되도록 수정

--- a/FallWin/Localizable.xcstrings
+++ b/FallWin/Localizable.xcstrings
@@ -32,7 +32,14 @@
       }
     },
     "asdf" : {
-
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "asdf"
+          }
+        }
+      }
     },
     "cancel" : {
       "extractionState" : "manual",
