[Feat] 리워드 광고추가

--- a/FallWin/Localizable.xcstrings
+++ b/FallWin/Localizable.xcstrings
@@ -92,6 +92,9 @@
         }
       }
     },
+    "Dall-E에 들어간 프롬프트:\n%@" : {
+
+    },
     "date_picker_day" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -1571,6 +1574,9 @@
         }
       }
     },
+    "loading..." : {
+
+    },
     "main_text_placeholder" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -2540,6 +2546,9 @@
         }
       }
     },
+    "Something wrong!" : {
+
+    },
     "tab_album" : {
       "localizations" : {
         "en" : {
@@ -2808,6 +2817,18 @@
           }
         }
       }
+    },
+    "감정을 입력하세요. (영어)" : {
+
+    },
+    "이미지 생성" : {
+
+    },
+    "프롬프트를 입력하세요." : {
+
+    },
+    "화풍을 입력하세요. (영어)" : {
+
     }
   },
   "version" : "1.0"
