--- a/FallWin/Localizable.xcstrings
+++ b/FallWin/Localizable.xcstrings
@@ -14,6 +14,40 @@
     "%lld" : {
 
     },
+    "ad_fail_alert_message" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Topping film up failed due to an ad failure."
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "광고를 불러올 수 없어서 필름을 충전할 수 없어요."
+          }
+        }
+      }
+    },
+    "ad_fail_alert_title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Film Top Up"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "필름 충전 실패"
+          }
+        }
+      }
+    },
     "album_search_placeholder" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -1539,6 +1573,23 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "그림 일기"
+          }
+        }
+      }
+    },
+    "limit_alert_ad" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Top Up"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "필름 받기"
           }
         }
       }
