[Feat] 알림 설정 뷰 in 온보딩 추가

--- a/FallWin/Localizable.xcstrings
+++ b/FallWin/Localizable.xcstrings
@@ -3120,6 +3120,12 @@
           }
         }
       }
+    },
+    "알림 설정을 허용해주세요" : {
+
+    },
+    "하루를 잊지 않고 기억할 수 있게 도와드릴게요!" : {
+
     }
   },
   "version" : "1.0"
