--- a/FallWin/Localizable.xcstrings
+++ b/FallWin/Localizable.xcstrings
@@ -1,6 +1,9 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "'설정'에서 알림 권한을 허용해주세요" : {
+
+    },
     "%@ (%@)" : {
       "localizations" : {
         "en" : {
@@ -3125,6 +3128,9 @@
 
     },
     "하루를 잊지 않고 기억할 수 있게 도와드릴게요!" : {
+
+    },
+    "확인" : {
 
     }
   },
