--- a/FallWin/Localizable.xcstrings
+++ b/FallWin/Localizable.xcstrings
@@ -1,9 +1,6 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
-    "'설정'에서 알림 권한을 허용해주세요" : {
-
-    },
     "%@ (%@)" : {
       "localizations" : {
         "en" : {
@@ -1678,6 +1675,9 @@
         }
       }
     },
+    "Key" : {
+      "extractionState" : "manual"
+    },
     "limit_alert_ad" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -1861,6 +1861,48 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "닉네임을 입력해주세요"
+          }
+        }
+      }
+    },
+    "onboarding_notifiacation_title" : {
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "알림 설정을 허용해주세요"
+          }
+        }
+      }
+    },
+    "onboarding_notification_permission_alert" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "'설정'에서 알림 권한을 허용해주세요"
+          }
+        }
+      }
+    },
+    "onboarding_notification_subtitle" : {
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "하루를 잊지 않고 기억할 수 있게 도와드릴게요!"
+          }
+        }
+      }
+    },
+    "onboarding_notification_title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "알림 설정을 허용해주세요"
           }
         }
       }
@@ -3170,12 +3212,6 @@
           }
         }
       }
-    },
-    "알림 설정을 허용해주세요" : {
-
-    },
-    "하루를 잊지 않고 기억할 수 있게 도와드릴게요!" : {
-
     },
     "확인" : {
 
