--- a/FallWin/Localizable.xcstrings
+++ b/FallWin/Localizable.xcstrings
@@ -73,7 +73,7 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "찾고 싶은 추억을 입력해보세요"
+            "value" : "찾고 싶은 키워드로 검색해보세요"
           }
         }
       }
