--- a/FallWin/en.lproj/InfoPlist.strings
+++ b/FallWin/en.lproj/InfoPlist.strings
@@ -5,7 +5,7 @@
   Created by 최명근 on 11/30/23.
   
 */
-NSUserTrackingUsageDescription = "Deliver ads that are optimized for the user.";
-NSFaceIDUsageDescription = "Unlock the contents";
-NSPhotoLibraryUsageDescription = "Save journal pictures";
-NSDocumentsFolderUsageDescription = "Back up and restore journals";
+NSUserTrackingUsageDescription = "Track users' ad identifiers to show more relevant ads.";
+NSFaceIDUsageDescription = "Using Face ID to unlock the app.";
+NSPhotoLibraryUsageDescription = "Accessing photo library to save journal pictures.";
+NSDocumentsFolderUsageDescription = "Accessing document folder to back up and restore journals.";
